Update dynamic website with latest changes - agent executor, credentials API, and dashboard improvements

--- a/views/dashboard_backup.ejs
+++ b/views/dashboard_backup.ejs
@@ -2965,8 +2965,6 @@ startErrorTracking('PC-Name', 'https://dynamic-website-hzu1.onrender.com', 'YOUR
         // Load initial PC list
             loadPcList();
         });
-    <script src="dashboard-additions.js"></script>
-    <script src="run-credentials.js"></script>
-    <script>
+    </script>
 </body>
 </html>
