Fix all JavaScript loading issues - proper script tags, correct paths, and move error-tracking-agent.js to public folder

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2963,9 +2963,10 @@ startErrorTracking('PC-Name', 'https://dynamic-website-hzu1.onrender.com', 'YOUR
         }
         
         // Load initial PC list
-            loadPcList();
-        });
-    <script src="dashboard-additions.js"></script>
-    <script src="run-credentials.js"></script>
+        loadPcList();
+    });
+    </script>
+    <script src="/dashboard-additions.js"></script>
+    <script src="/run-credentials.js"></script>
 </body>
 </html>
